Coveo: Fix clipping on sidebar + touch up colors

--- a/assets/css/v2/style.css
+++ b/assets/css/v2/style.css
@@ -700,8 +700,11 @@ ol li:last-child {
 
       .sidebar__search {
         display: unset;
-        width: calc(var(--sidebar-width) - 4rem);
-        margin-inline-start: 1rem;
+        width: calc(var(--sidebar-width));
+        --atomic-primary: oklch(var(--color-brand)); /* Adjust the primary color */
+        --atomic-ring-primary: oklch(var(--color-brand) / 0.4); /* Adjust the focus color */
+        margin-block-start: 0.5rem;
+        padding-inline: 0.5rem;
       }
     }
   }
